🐛 fix(ui): fix account dropdown visibility

--- a/research-indicators/src/app/shared/components/alliance-navbar/alliance-navbar.component.scss
+++ b/research-indicators/src/app/shared/components/alliance-navbar/alliance-navbar.component.scss
@@ -140,58 +140,58 @@
       width: 500px !important;
     }
   }
+}
 
-  .profile {
-    padding: 20px;
+.profile {
+  padding: 10px;
+}
+
+.account-container {
+  width: 250px;
+  color: #3e3e3e;
+  margin: 20px 0 40px;
+
+  .account-header {
+    font-size: 1rem;
+    margin-bottom: 30px;
   }
 
-  .account-container {
-    width: 250px;
-    color: #3e3e3e;
-    margin: 20px 0 40px;
+  .account-content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 15px;
 
-    .account-header {
-      font-size: 1rem;
-      margin-bottom: 30px;
+    .account-avatar {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
     }
 
-    .account-content {
+    .account-details {
       display: flex;
-      flex-direction: row;
-      align-items: center;
-      gap: 15px;
+      flex-direction: column;
+      justify-content: center;
 
-      .account-avatar {
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
+      .account-name {
+        font-size: 1rem;
+        margin-bottom: 10px;
+        color: #909090;
       }
 
-      .account-details {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+      .account-email {
+        font-size: 0.85rem;
+        color: #000;
+      }
 
-        .account-name {
-          font-size: 1rem;
-          margin-bottom: 10px;
-          color: #909090;
-        }
-
-        .account-email {
-          font-size: 0.85rem;
-          color: #000;
-        }
-
-        .account-role {
-          font-size: 12px;
-          color: white;
-          background-color: rgb(37 37 37);
-          border-radius: 4px;
-          padding: 5px;
-          width: max-content;
-          margin-top: 10px;
-        }
+      .account-role {
+        font-size: 12px;
+        color: white;
+        background-color: rgb(37 37 37);
+        border-radius: 4px;
+        padding: 5px;
+        width: max-content;
+        margin-top: 10px;
       }
     }
   }
